# tabulator-rs

./: .gitignore  Cargo.toml  README.md  flake.nix  justfile
.github/workflows/: test-suite.yml
cli-tests/: cell-1.expected  cell-1.json  cell-2.expected  cell-2.psv  cell-2.psvf
json-tests/: cell.expected
src/: conversions.rs  json.rs  lib.rs  main.rs  num_bigint.rs  psv.rs  rust_decimal.rs
tests/: nesting.rs  spacing.rs
