[package]
name = "tabulator"
version = "0.4.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Grid-oriented tabulation with justification and anchors"
homepage = "https://github.com/tesujimath/tabulator"
repository = "https://github.com/tesujimath/tabulator"
readme = "README.md"

[dependencies]
itertools = "0.14.0"
joinery = "3.1.0"
lazy_format = "2.0.3"
num-bigint = { version = "0.4.6", optional = true }
rust_decimal = { version = "1.38.0", optional = true }
test-case = "3.3.1"
unicode-width = "0.2.1"

[features]
rust_decimal = ["dep:rust_decimal"]
num-bigint = ["dep:num-bigint"]
